projeto atualizado até a aula do dia 12/10

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+      "Azure": "Server=tcp:numenor.database.windows.net,1433;Initial Catalog=ads-dev-software-csharp;Persist Security Info=False;User ID=frodo;Password=senh@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
